# agg21

./: .gitignore  LICENSE.md  README.md
examples/: .cvsignore  Makefile.am  aa_demo.cpp  alpha_mask.cpp  alpha_mask2.cpp  alpha_mask3.cpp  bspline.cpp  circles.cpp  component_rendering.cpp  conv_contour.cpp  conv_dash_marker.cpp  conv_stroke.cpp  distortions.cpp  freetype_test.cpp  gamma_correction.cpp  gamma_ctrl.cpp  gouraud.cpp  gpc_test.cpp  gradients.cpp  graph_test.cpp  idea.cpp  image1.cpp  image_alpha.cpp  image_filters.cpp  image_fltr_graph.cpp  image_perspective.cpp  image_transforms.cpp  interactive_polygon.cpp  lion.cpp  lion_lens.cpp  lion_outline.cpp  mol_view.cpp  multi_clip.cpp  parse_lion.cpp  pattern_fill.cpp  perspective.cpp  pixel_formats.h  polymorphic_renderer.cpp  raster_text.cpp  rasterizers.cpp  (+11 more)
examples/BeOS/: Makefile  archive_bin.txt  single_folder.sh
examples/BeOS/graph_test/: Makefile
examples/BeOS/image_transforms/: readme
examples/X11/: Makefile
examples/X11/freetype_test/: Makefile
examples/X11/trans_curve1/: Makefile
examples/X11/trans_curve2/: Makefile
examples/console/bezier_test/: bezier_test.cpp  bezier_test.dsp
examples/linux_sdl/aa_demo/: Makefile
examples/linux_sdl/alpha_mask/: Makefile
examples/linux_sdl/alpha_mask2/: Makefile
examples/linux_sdl/alpha_mask3/: Makefile
examples/linux_sdl/circles/: Makefile
examples/linux_sdl/component_rendering/: Makefile
examples/linux_sdl/conv_contour/: Makefile
examples/linux_sdl/conv_dash_marker/: Makefile
examples/linux_sdl/conv_stroke/: Makefile
examples/linux_sdl/distortions/: Makefile
examples/linux_sdl/gamma_correction/: Makefile
examples/linux_sdl/gamma_ctrl/: Makefile
examples/linux_sdl/gouraud/: Makefile
examples/linux_sdl/gpc_test/: Makefile
examples/linux_sdl/gradients/: Makefile
examples/linux_sdl/graph_test/: Makefile
examples/linux_sdl/idea/: Makefile
examples/linux_sdl/image1/: Makefile
examples/linux_sdl/image_alpha/: Makefile
examples/linux_sdl/image_filters/: Makefile
examples/linux_sdl/image_fltr_graph/: Makefile
examples/linux_sdl/image_perspective/: Makefile
examples/linux_sdl/image_transforms/: Makefile  readme!
examples/linux_sdl/lion/: Makefile
examples/linux_sdl/lion_lens/: Makefile
examples/linux_sdl/lion_outline/: Makefile
examples/linux_sdl/mol_view/: Makefile
examples/linux_sdl/multi_clip/: Makefile
examples/linux_sdl/pattern_fill/: Makefile
examples/linux_sdl/perspective/: Makefile
examples/linux_sdl/polymorphic_renderer/: Makefile
examples/linux_sdl/raster_text/: Makefile
examples/linux_sdl/rasterizers/: Makefile
examples/linux_sdl/rasterizers2/: Makefile
examples/linux_sdl/rounded_rect/: Makefile
examples/linux_sdl/scanline_boolean/: Makefile
examples/linux_sdl/scanline_boolean2/: Makefile
examples/linux_sdl/simple_blur/: Makefile
examples/linux_sdl/trans_polar/: Makefile
examples/macos_cw/: readme.txt
examples/win32_api/: Makefile  examples.dsw
examples/win32_api/aa_demo/: Makefile
examples/win32_api/freetype_test/: freetype_test.dsp
examples/win32_api/gouraud/: gouraud.dsp
examples/win32_api/gpc_test/: Makefile
examples/win32_api/image_filters/: image_filters.dsp
examples/win32_api/image_perspective/: image_perspective.dsp
examples/win32_api/images1/: image1.dsp
examples/win32_api/lion/: lion.dsp
examples/win32_api/pattern_fill/: pattern_fill.dsp
examples/win32_api/polymorphic_renderer/: polymorphic_renderer.dsp
examples/win32_api/pure_api/: pure_api.cpp
examples/win32_api/rasterizers2/: rasterizers2.dsp
examples/win32_api/scanline_boolean/: scanline_boolean.dsp
examples/win32_api/truetype_test/: truetype_test.dsp
examples/win32_mfc/CustomRasterizer/: CustomRasterizerView.cpp  ReadMe.txt
examples/win32_mfc/CustomRenderer/: CustomRenderer.dsp  CustomRendererView.cpp  ReadMe.txt
include/: Makefile.am  agg_alpha_mask_u8.h  agg_arc.h  agg_array.h  agg_arrowhead.h  agg_basics.h  agg_bezier_arc.h  agg_bitset_iterator.h  agg_bounding_rect.h  agg_bspline.h  agg_clip_liang_barsky.h  agg_color_rgba.h  agg_color_rgba8.h  agg_color_rgba8_pre.h  agg_conv_adaptor_vcgen.h  agg_conv_adaptor_vpgen.h  agg_conv_bspline.h  agg_conv_clip_polygon.h  agg_conv_close_polygon.h  agg_conv_concat.h  agg_conv_contour.h  agg_conv_curve.h  agg_conv_dash.h  agg_conv_gpc.h  agg_conv_marker.h  agg_conv_marker_adaptor.h  agg_conv_segmentator.h  agg_conv_shorten_path.h  agg_conv_smooth_poly1.h  agg_conv_stroke.h  agg_conv_transform.h  agg_conv_unclose_polygon.h  agg_curves.h  agg_dda_line.h  agg_ellipse.h  agg_ellipse_bresenham.h  agg_embedded_raster_fonts.h  agg_font_cache_manager.h  agg_gamma_functions.h  agg_gamma_lut.h  (+76 more)
include/ctrl/: Makefile.am  agg_cbox_ctrl.h  agg_ctrl.h  agg_gamma_ctrl.h  agg_gamma_spline.h  agg_rbox_ctrl.h  agg_scale_ctrl.h  agg_slider_ctrl.h  agg_spline_ctrl.h
include/dbg_new/: agg_dbg_new.h
include/platform/: agg_platform_support.h
include/platform/win32/: agg_win32_bmp.h
include/util/: Makefile.am  agg_color_conv.h  agg_color_conv_rgb8.h
src/: .cvsignore  Makefile  Makefile.am  agg_arc.cpp  agg_arrowhead.cpp  agg_bezier_arc.cpp  agg_bspline.cpp  agg_curves.cpp  agg_embedded_raster_fonts.cpp  agg_gsv_text.cpp  agg_image_filters.cpp  agg_line_aa_basics.cpp  agg_line_profile_aa.cpp  agg_path_storage.cpp  agg_rasterizer_scanline_aa.cpp  agg_rounded_rect.cpp  agg_sqrt_tables.cpp  agg_trans_affine.cpp  agg_trans_double_path.cpp  agg_trans_single_path.cpp  agg_trans_warp_magnifier.cpp  agg_vcgen_bspline.cpp  agg_vcgen_contour.cpp  agg_vcgen_dash.cpp  agg_vcgen_markers_term.cpp  agg_vcgen_smooth_poly1.cpp  agg_vcgen_stroke.cpp  agg_vpgen_clip_polygon.cpp  agg_vpgen_segmentator.cpp
src/ctrl/: .cvsignore  Makefile.am  agg_cbox_ctrl.cpp  agg_gamma_ctrl.cpp  agg_gamma_spline.cpp  agg_rbox_ctrl.cpp  agg_scale_ctrl.cpp  agg_slider_ctrl.cpp  agg_spline_ctrl.cpp
src/dbg_new/: agg_dbg_new.cpp
src/platform/BeOS/: agg_platform_support.cpp
src/platform/X11/: .cvsignore  agg_platform_support.cpp
src/platform/mac/: agg_platform_support.cpp
(+2 files in other folders)
